# IoTManager

./: CMakeLists.txt  IoT_Manager.pro  ReadMe.md  main.cpp
Objects/: BaseClass.h
Objects/Config/: Config.cpp  Config.h  ConfigModel.cpp  ConfigModel.h
Objects/Device/: Device.cpp  Device.h  DeviceList.cpp  DeviceList.h  DeviceModel.cpp  DeviceModel.h
Objects/Record/: Record.cpp  Record.h  RecordList.cpp  RecordList.h  RecordModel.cpp  RecordModel.h
Objects/Record/Sensor/: RecordSensor.h  RecordSensorList.cpp  RecordSensorList.h  RecordSensorModel.cpp  RecordSensorModel.h
Objects/Sensor/: Sensor.cpp  Sensor.h  SensorList.cpp  SensorList.h  SensorModel.cpp  SensorModel.h
gRPCClient/: grpcClient.h
gRPCClient/proto/service/: IoT.grpc.pb.cc  IoT.grpc.pb.h  IoT.pb.cc  IoT.pb.h
qml/: AddDevice.qml  AddRecord.qml  AddSensor.qml  DeviceBox.qml  DeviceOption.qml  ModifyDevice.qml  ModifyRecord.qml  ModifySensor.qml  RecordBox.qml  SensorBox.qml  Status.qml  main.qml  qtquickcontrols2.conf  rcc.qrc  src.cpp
utils/: utils.h
